--- a/hakkimizda/index.html
+++ b/hakkimizda/index.html
@@ -70,6 +70,7 @@
           <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw" class="fa fa-youtube"></a>
           <a href="https://www.linkedin.com/company/shbitt" class="fa fa-linkedin"></a>
           <a href="https://github.com/shbitt" class="fa fa-github"></a>
+          <a href="mailto:shbitt@hotmail.com" class="fa fa-envelope"></a>
       </div>
 
     
