--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ IEEE Engineering in Medicine and Biology Society (EMBS)’da Fellow, American As
               <div class="card mb-6 shadow-lg" style="width: auto; min-width: 225px; max-width:25rem;" >
                 <img class="card-img-top" src="images/kominite_cr.jpg" alt="KOMİNİTE" >
                 <div class="card-body">
-                  <h5 class="card-title">Kominite</h5>
+                  <h5 class="card-title">Komünite</h5>
                   <p class="card-text">SHBİTT çatısı altında multisipliner çalışmalara katılmak isteyenlerle tanışın.</p>
                   <a href="https://discord.gg/N6caV57dDH" class="btn btn-mor" style="margin: 2px;">Discord Sunucusu</a>
                 </div>
