--- a/linkler/index.html
+++ b/linkler/index.html
@@ -34,6 +34,7 @@
       <a href="https://www.linkedin.com/company/shbitt" type="button" class="btn btn-secondary btn-lg btn-block">LinkedIn</a>
       <a href="https://twitter.com/ksbu_shbitt" type="button" class="btn btn-secondary btn-lg btn-block">Twitter</a>
       <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw" type="button" class="btn btn-secondary btn-lg btn-block">Youtube</a>
+      <a href="https://open.spotify.com/show/5QIXgevuaJtZDNQiGKWHRe" type="button" class="btn btn-secondary btn-lg btn-block">Spotify Podcast</a>
       <a href="https://github.com/shbitt" type="button" class="btn btn-secondary btn-lg btn-block">GitHub Depomuz</a>
            
     </div>
