--- a/hakkimizda/index.html
+++ b/hakkimizda/index.html
@@ -65,12 +65,13 @@
 
 <!-- Sosyal Medya -->    
       <div class="d-flex justify-content-center">
-          <a href="https://www.instagram.com/ksbu_shbitt/" class="fa fa-instagram shadow"></a>
-          <a href="https://twitter.com/ksbu_shbitt" class="fa fa-twitter"></a>
-          <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw" class="fa fa-youtube"></a>
-          <a href="https://www.linkedin.com/company/shbitt" class="fa fa-linkedin"></a>
-          <a href="https://github.com/shbitt" class="fa fa-github"></a>
-          <a href="mailto:shbitt@hotmail.com" class="fa fa-envelope"></a>
+        <a href="https://www.instagram.com/ksbu_shbitt/" class="fa fa-instagram shadow"></a>
+        <a href="https://twitter.com/ksbu_shbitt" class="fa fa-twitter"></a>          
+        <a href="https://www.linkedin.com/company/shbitt" class="fa fa-linkedin"></a>
+        <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw" class="fa fa-youtube"></a>
+        <a href="https://open.spotify.com/show/5QIXgevuaJtZDNQiGKWHRe" class="fa fa-spotify"></a>
+        <a href="https://github.com/shbitt" class="fa fa-github"></a>
+        <a href="mailto:shbitt@hotmail.com" class="fa fa-envelope"></a>
       </div>
 
     
