eklendi > marmara - opensource nedir?

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,14 +20,11 @@
     </div>
 
     <div class="row">
-      <a href="https://youtu.be/frwh1j8GAuQ" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://forms.gle/xQ44dLAgKqSYHLQMA" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
-        7 Şubat 2021 - İmmünoloji, Kanser ve Akademi
+        23 Şubat 2021 - Özgür Yazılım Felsefesine Giriş Etkinliği Kayıt Formu
       </a> 
 
-      <a href="https://youtu.be/xyfZIBkteco" type="button" class="btn btn-primary btn-lg btn-block">
-       3 Şubat 2021 - Klinik Uygulamalarıyla Robotik Cerrahi
-      </a> 
       <a href="https://discord.gg/N6caV57dDH" type="button" class="btn btn-primary btn-lg btn-block">Discord Sunucumuz</a>
       <a href="https://shbitt.github.io/" type="button" class="btn btn-secondary btn-lg btn-block">Ana Sayfa</a>
       <a href="https://www.instagram.com/ksbu_shbitt/" type="button" class="btn btn-secondary btn-lg btn-block">Instagram</a>
