--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
         <p style="margin-bottom: 30px;">Kütahya Sağlık Bilimleri Üniversitesi bünyesinde kurulan Sağlıkta Hesaplamalı Bilimler ve İnovatif Teknoloji Topluluğu lisans öğrencilerini hesaplamalı bilimler konusunda yetkin ve farkındalığa erişmiş bireyler haline getirmeyi ve gelişen sağlık teknolojilerini sadece kullanan değil üreten kimseler olmasına katkı sağlamayı amaçlıyor.</p>
         <h3 style="margin: 0px;">Planlanan En Yakın Etkinlik:</h3>
         
+        <div class="d-flex flex-row" style="margin: 3px;">          
+          <div class="p-0">
+            <div class="spinner-grow spinner-grow-sm text-danger" role="status" style="margin-right: 7px;">
+              <span class="sr-only">yanıp sönen şey...</span>
+          </div>
+           </div>           
+              <p1>23 Şubat 2021 - Özgür Yazılım Felsefesine Giriş Etkinliği Kayıt Formu</p1> &ensp; <a href="https://forms.gle/xQ44dLAgKqSYHLQMA" target="_blank" >🔗Kayıt Formu</a>&ensp;&ensp;
+                                                                                          
+        </div>
 
         <div class="d-flex flex-row" style="margin: 3px;">          
           <div class="p-0">
