--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,15 +20,15 @@
     </div>
 
     <div class="row">
-      <a href="https://forms.gle/yHr1aHDm8sFhVqvQ6" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://youtu.be/vqJozDikIVU" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
-        7 Mart 2021 - React Native Basics Etkinliği Etkinliği Kayıt Formu
-      </a> 
-      <a href="https://forms.gle/9eDQFmJHCjRKU5966" type="button" class="btn btn-primary btn-lg btn-block">
-        <span class="spinner-grow spinner-grow-sm"></span>
-        5 Mart 2021 - Bağımsız Oyun Geliştiriciler İçin Topluluklar Neden Önemli? Etkinliği Kayıt Formu
-      </a>
+        2 Nisan 2021 - Cilt Altı Çipler ve Akıllı Şehirler
+      </a>       
 
+      <a href="https://forms.gle/pbffykbb2mQSZaHx6" type="button" class="btn btn-primary btn-lg btn-block">
+        <span class="spinner-grow spinner-grow-sm"></span>
+        Cilt Altı Çipler ve Akıllı Şehirler Soru Sorma Formu
+      </a> 
       <a href="https://discord.gg/N6caV57dDH" type="button" class="btn btn-primary btn-lg btn-block">Discord Sunucumuz</a>
       <a href="https://shbitt.github.io/" type="button" class="btn btn-secondary btn-lg btn-block">Ana Sayfa</a>
       <a href="https://www.instagram.com/ksbu_shbitt/" type="button" class="btn btn-secondary btn-lg btn-block">Instagram</a>
