s1b10 podcast & hakkımızda değişikliği & discord widget

--- a/index.html
+++ b/index.html
@@ -420,7 +420,6 @@ IEEE Engineering in Medicine and Biology Society (EMBS)’da Fellow, American As
             
     </div>
 
-
 <!-- Kartlık Bölümü -->
     <div class="row">
         <div class="card-deck">
@@ -458,12 +457,16 @@ IEEE Engineering in Medicine and Biology Society (EMBS)’da Fellow, American As
                 </div>
               </div>
               <div class="card mb-6 shadow-lg" style="width: auto; min-width: 225px; max-width:25rem;" >
-                <img class="card-img-top" src="images/kominite_cr.jpg" alt="KOMİNİTE" >
-                <div class="card-body">
-                  <h5 class="card-title">Komünite</h5>
-                  <p class="card-text">SHBİTT çatısı altında multisipliner çalışmalara katılmak isteyenlerle tanışın.</p>
-                  <a href="https://discord.gg/N6caV57dDH" class="btn btn-mor" style="margin: 2px;">Discord Sunucusu</a>
-                </div>
+                
+                  <iframe src="https://discord.com/widget?id=776459535279587368&theme=dark" style="border-radius:10px; overflow: hidden;" width="350" height="470" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                  <!--
+                  <img class="card-img-top" src="images/kominite_cr.jpg" alt="KOMİNİTE" >
+                  <div class="card-body">
+                    <h5 class="card-title">Komünite</h5>
+                    <p class="card-text">SHBİTT çatısı altında multisipliner çalışmalara katılmak isteyenlerle tanışın.</p>
+                    <a href="https://discord.gg/N6caV57dDH" class="btn btn-mor" style="margin: 2px;">Discord Sunucusu</a>
+                  </div>
+                -->
               </div>
           </div>          
     </div>
