--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ IEEE Engineering in Medicine and Biology Society (EMBS)’da Fellow, American As
               </div>
               <div class="card mb-6 shadow-lg" style="width: auto; min-width: 225px; max-width:25rem;" >
                 
-                  <iframe src="https://discord.com/widget?id=776459535279587368&theme=dark" style="border-radius:10px; overflow: hidden;" width="350" height="470" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                  <iframe src="https://discord.com/widget?id=776459535279587368&theme=dark" style="border-radius:10px; overflow: hidden;" min-width="250" height="470" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                   <!--
                   <img class="card-img-top" src="images/kominite_cr.jpg" alt="KOMİNİTE" >
                   <div class="card-body">
