--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,8 +20,12 @@
     </div>
 
     <div class="row">
-      <a href="https://youtu.be/vqJozDikIVU" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://youtu.be/6lwWHUH07rQ" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
+        22 Mayıs 2021 - Tasarımdan Uygulamaya Sağlıkta Yeni Teknolojiler
+      </a>
+      
+      <a href="https://youtu.be/vqJozDikIVU" type="button" class="btn btn-primary btn-lg btn-block">
         2 Nisan 2021 - Cilt Altı Çipler ve Akıllı Şehirler
       </a>       
       
