--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>SHBİTT - Ana Sayfa</title>
         <meta charset="utf-8">
         <meta name="keywords" content="SHBİTT, KSBÜ, Hesaplamalı Bilimler, Bilim, Tıp, Biyoloji, Bilgisayar">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
         <link rel="icon" type="image/png" href="/favicon.png"/>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@900&display=swap" rel='stylesheet'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
