--- a/linkler/index.html
+++ b/linkler/index.html
@@ -21,16 +21,14 @@
 
 
     <div class="row">
-      <a href="https://www.springer.com/gp/book/9783030699772" type="button" class="btn btn-primary btn-lg btn-block">Artificial Intelligence for a Better Future</a>
-
       <a href="https://youtu.be/6lwWHUH07rQ" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
+        29 Mayıs 2021 - Yeni Teknolojilerle Rehabilitasyon ve Oyunlaştırma
+      </a>
+
+      <a href="https://youtu.be/6lwWHUH07rQ" type="button" class="btn btn-primary btn-lg btn-block">
         22 Mayıs 2021 - Tasarımdan Uygulamaya Sağlıkta Yeni Teknolojiler
       </a>
-      
-      <a href="https://youtu.be/vqJozDikIVU" type="button" class="btn btn-primary btn-lg btn-block">
-        2 Nisan 2021 - Cilt Altı Çipler ve Akıllı Şehirler
-      </a>       
       
       <a href="https://discord.gg/N6caV57dDH" type="button" class="btn btn-primary btn-lg btn-block">Discord Sunucumuz</a>
       <a href="https://shbitt.github.io/" type="button" class="btn btn-secondary btn-lg btn-block">Ana Sayfa</a>
