--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <span class="sr-only">yanıp sönen şey...</span>
         </div>
          </div>           
-            <p1>29 Mayıs 2021 - Yeni Teknolojilerle Rehabilitasyon ve Oyunlaştırma</p1> &ensp; <a href="https://youtu.be/6lwWHUH07rQ" target="_blank" >🔗YouTube</a>&ensp;&ensp;
+            <p1>29 Mayıs 2021 - Yeni Teknolojilerle Rehabilitasyon ve Oyunlaştırma</p1> &ensp; <a href="https://youtu.be/GWDvfCW2oh4" target="_blank" >🔗YouTube</a>&ensp;&ensp;
             <li><a href="#" data-toggle="modal" data-target="#ozgecmis_yeniteknolojilerlerehabilitasyonveoyunlastirma">Etkinlik Hakkında</a></li>&ensp;&ensp;
                                                                                         
       </div>
