--- a/linkler/index.html
+++ b/linkler/index.html
@@ -21,7 +21,7 @@
 
 
     <div class="row">
-      <a href="https://youtu.be/6lwWHUH07rQ" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://youtu.be/GWDvfCW2oh4" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         29 Mayıs 2021 - Yeni Teknolojilerle Rehabilitasyon ve Oyunlaştırma
       </a>
