etkinlik eklendi > 4 temmuz e burun

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -21,13 +21,13 @@
 
 
     <div class="row">
-      <a href="https://youtu.be/GWDvfCW2oh4" type="button" class="btn btn-primary btn-lg btn-block">
-        <span class="spinner-grow spinner-grow-sm"></span>
-        29 Mayıs 2021 - Yeni Teknolojilerle Rehabilitasyon ve Oyunlaştırma
-      </a>
 
-      <a href="https://youtu.be/6lwWHUH07rQ" type="button" class="btn btn-primary btn-lg btn-block">
-        22 Mayıs 2021 - Tasarımdan Uygulamaya Sağlıkta Yeni Teknolojiler
+      a href="https://youtu.be/GWDvfCW2oh4" type="button" class="btn btn-primary btn-lg btn-block">
+        <span class="spinner-grow spinner-grow-sm"></span>
+        4 Temmuz 2021 - Sağlık Uygulamalarında Elektronik Burun
+      </a>
+      <a href="https://youtu.be/GWDvfCW2oh4" type="button" class="btn btn-primary btn-lg btn-block">
+        29 Mayıs 2021 - Yeni Teknolojilerle Rehabilitasyon ve Oyunlaştırma
       </a>
       
       <a href="https://discord.gg/N6caV57dDH" type="button" class="btn btn-primary btn-lg btn-block">Discord Sunucumuz</a>
