--- a/linkler/index.html
+++ b/linkler/index.html
@@ -22,7 +22,7 @@
 
     <div class="row">
 
-      <a href="https://youtu.be/GWDvfCW2oh4" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://youtu.be/XkC8jjxGLc4" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         4 Temmuz 2021 - Sağlık Uygulamalarında Elektronik Burun
       </a>
