--- a/linkler/index.html
+++ b/linkler/index.html
@@ -22,12 +22,12 @@
 
     <div class="row">
 
-      <a href="https://youtu.be/XkC8jjxGLc4" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://youtu.be/jwcwyFQICFs" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
-        4 Temmuz 2021 - Sağlık Uygulamalarında Elektronik Burun
+        13 Ağustos 2021 - Sorundan Çözüme Tasarım Uygulamaları
       </a>
-      <a href="https://youtu.be/GWDvfCW2oh4" type="button" class="btn btn-primary btn-lg btn-block">
-        29 Mayıs 2021 - Yeni Teknolojilerle Rehabilitasyon ve Oyunlaştırma
+      <a href="https://youtu.be/XkC8jjxGLc4" type="button" class="btn btn-primary btn-lg btn-block">
+        4 Temmuz 2021 - Sağlık Uygulamalarında Elektronik Burun
       </a>
       
       <a href="https://discord.gg/N6caV57dDH" type="button" class="btn btn-primary btn-lg btn-block">Discord Sunucumuz</a>
