etkinlik eklendi > 19 eylül

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -22,14 +22,16 @@
 
     <div class="row">
 
+      <a href="https://youtu.be/WGCzJi1BrjA" type="button" class="btn btn-primary btn-lg btn-block">
+        <span class="spinner-grow spinner-grow-sm"></span>
+        19 Eylül 2021 - Neştersiz Cerrahi: Girişimsel Radyoloji
+      </a>
+
       <a href="https://youtu.be/jwcwyFQICFs" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         13 Ağustos 2021 - Sorundan Çözüme Tasarım Uygulamaları
       </a>
-      <a href="https://youtu.be/XkC8jjxGLc4" type="button" class="btn btn-primary btn-lg btn-block">
-        4 Temmuz 2021 - Sağlık Uygulamalarında Elektronik Burun
-      </a>
-      
+          
       <a href="https://discord.gg/N6caV57dDH" type="button" class="btn btn-primary btn-lg btn-block">Discord Sunucumuz</a>
       <a href="https://shbitt.github.io/" type="button" class="btn btn-secondary btn-lg btn-block">Ana Sayfa</a>
       <a href="https://www.instagram.com/ksbu_shbitt/" type="button" class="btn btn-secondary btn-lg btn-block">Instagram</a>
