--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <span class="sr-only">yanıp sönen şey...</span>
         </div>
          </div>           
-            <p1>13 Ağustos 2021 - Sorundan Çözüme Tasarım Uygulamaları</p1> &ensp; <a href="https://youtu.be/WGCzJi1BrjA" target="_blank" >🔗YouTube</a>&ensp;&ensp;
+            <p1>19 Eylül 2021 - Neştersiz Cerrahi: Girişimsel Radyoloji</p1> &ensp; <a href="https://youtu.be/WGCzJi1BrjA" target="_blank" >🔗YouTube</a>&ensp;&ensp;
             <li><a href="#" data-toggle="modal" data-target="#ozgecmis_girisimselradyoloji">Etkinlik Hakkında</a></li>&ensp;&ensp;
                                                                                         
       </div>
