--- a/linkler/index.html
+++ b/linkler/index.html
@@ -19,7 +19,11 @@
 
     </div>
 
-
+    <div class="row">
+      <a href="https://www.nvidia.com/gtc/" type="button" class="btn btn-primary btn-lg btn-block">
+        <span class="spinner-grow spinner-grow-sm"></span>
+        NVIDIA GTC 
+      </a>
     <div class="row">
       <a href="https://forms.gle/14TfFPRNVewz6D9R9" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
