--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,9 +20,9 @@
     </div>
 
     <div class="row">
-      <a href="https://www.nvidia.com/gtc/" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://www.nvidia.com/gtc/" type="button" class="btn btn-success">Success</button>
         <span class="spinner-grow spinner-grow-sm"></span>
-        NVIDIA GTC 
+        8-11 Kasım 2021 - NVIDIA GTC 
       </a>
         
     
@@ -32,7 +32,6 @@
       </a> 
 
       <a href="https://youtu.be/WGCzJi1BrjA" type="button" class="btn btn-primary btn-lg btn-block">
-        <span class="spinner-grow spinner-grow-sm"></span>
         19 Eylül 2021 - Neştersiz Cerrahi: Girişimsel Radyoloji
       </a>          
       <a href="https://discord.gg/N6caV57dDH" type="button" class="btn btn-primary btn-lg btn-block">Discord Sunucumuz</a>
