--- a/linkler/index.html
+++ b/linkler/index.html
@@ -26,7 +26,7 @@
       </a>
         
     
-      <a href="https://forms.gle/14TfFPRNVewz6D9R9" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://forms.gle/14TfFPRNVewz6D9R9" type="button" class="btn btn-success btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         Yeni Üye Formu
       </a> 
