--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,13 +20,13 @@
     </div>
 
     <div class="row">
-      <a href="https://www.nvidia.com/gtc/" type="button" class="btn btn-success">Success</button>
+      <a href="https://www.nvidia.com/gtc/" type="button" class="btn btn-success btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         8-11 Kasım 2021 - NVIDIA GTC 
       </a>
         
     
-      <a href="https://forms.gle/14TfFPRNVewz6D9R9" type="button" class="btn btn-success btn-lg btn-block">
+      <a href="https://forms.gle/14TfFPRNVewz6D9R9" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         Yeni Üye Formu
       </a> 
