--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span class="sr-only">yanıp sönen şey...</span>
         </div>
          </div>           
-            <p1>21 Ekim 2021 - Muskuloskeletal Sistem ve Artrit Radyolojisinde DL</p1> &ensp; <a href="https://youtu.be/l8YIoi26CbM" target="_blank" >🔗YouTube</a>&ensp;&ensp;
+            <p1>21 Ekim 2021 - Muskuloskeletal Sistem ve Artrit Radyolojisinde Derin Öğr.</p1> &ensp; <a href="https://youtu.be/l8YIoi26CbM" target="_blank" >🔗YouTube</a>&ensp;&ensp;
             <li><a href="#" data-toggle="modal" data-target="#ozgecmis_muskuloskeletalsistem">Etkinlik Hakkında</a></li>&ensp;&ensp;
                                                                                         
       </div>
