eklendi > 1.ulusal yz kongre

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -19,14 +19,10 @@
 
     </div>
     <div class="row">
-      <a href="https://youtu.be/l8YIoi26CbM" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://sagliktayapayzekaogrenci.com/" type="button" class="btn btn-primary btn-lg btn-block">
          <span class="spinner-grow spinner-grow-sm"></span>
-        22 Ekim 2021 - Muskuloskeletal Sistem ve Artrit Radyolojisinde Derin Öğrenme 
+        29-30-31 Ocak 2022 1. Ulusal Sağlıkta Yapay Zeka Öğrenci Kongresi  
       </a>
-
-      <a href="https://youtu.be/WGCzJi1BrjA" type="button" class="btn btn-primary btn-lg btn-block">
-        19 Eylül 2021 - Neştersiz Cerrahi: Girişimsel Radyoloji
-      </a> 
 
       <a href="https://forms.gle/14TfFPRNVewz6D9R9" type="button" class="btn btn-primary btn-lg btn-block">
         Yeni Üye Formu
